// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SelectedItem render connection lines 1`] = `

<div>
  <div class="relative">
    <gui-card classname="relative my-4 border-muted-foreground">
      <gui-card-header classname="relative -m-px flex flex-row rounded-t-lg bg-primary px-4 py-3 text-white dark:border dark:border-solid dark:border-muted-foreground dark:text-black rounded-b-lg">
        <gui-card-title classname="flex w-full items-center justify-between">
          <div class="flex items-center justify-between">
            <span class="text-sm font-medium">
              item
            </span>
            <span class="mx-2">
              ·
            </span>
            <span class="text-sm font-light text-muted-foreground">
              1.0.0
            </span>
          </div>
        </gui-card-title>
      </gui-card-header>
      <div class="p-4">
      </div>
      <div class="w-full px-4 pb-4">
        <gui-tabs>
          <gui-tabs-list classname="grid w-full grid-cols-2">
            <gui-tabs-trigger
              value="package.json"
              classname="w-36"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="16"
                height="16"
                viewbox="0 0 24 24"
                fill="none"
                stroke="currentColor"
                stroke-width="2"
                stroke-linecap="round"
                stroke-linejoin="round"
                class="lucide lucide-file-search2 mr-2"
              >
                <path d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z">
                </path>
                <path d="M14 2v4a2 2 0 0 0 2 2h4">
                </path>
                <circle
                  cx="11.5"
                  cy="14.5"
                  r="2.5"
                >
                </circle>
                <path d="M13.3 16.3 15 18">
                </path>
              </svg>
              package.json
            </gui-tabs-trigger>
          </gui-tabs-list>
          <gui-tabs-content value="package.json">
          </gui-tabs-content>
        </gui-tabs>
      </div>
    </gui-card>
    <div class="absolute -right-4 top-7 w-4 rounded-tr-sm border-t border-solid border-neutral-300 dark:border-neutral-600">
    </div>
  </div>
</div>

`;

exports[`SelectedItem render with custom registry 1`] = `

<div>
  <div class="relative">
    <gui-card classname="relative my-4 border-muted-foreground">
      <gui-card-header classname="relative -m-px flex flex-row rounded-t-lg bg-primary px-4 py-3 text-white dark:border dark:border-solid dark:border-muted-foreground dark:text-black rounded-b-lg">
        <gui-card-title classname="flex w-full items-center justify-between">
          <div class="flex items-center justify-between">
            <span class="text-sm font-medium">
              item
            </span>
            <span class="mx-2">
              ·
            </span>
            <span class="text-sm font-light text-muted-foreground">
              1.0.0
            </span>
          </div>
          <div class="rounded-full border border-solid border-neutral-200 px-2 py-1 text-xs font-medium dark:border-gray-600">
            https://example.com
          </div>
        </gui-card-title>
      </gui-card-header>
      <div class="p-4">
      </div>
      <div class="w-full px-4 pb-4">
        <gui-tabs>
          <gui-tabs-list classname="grid w-full grid-cols-2">
            <gui-tabs-trigger
              value="package.json"
              classname="w-36"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="16"
                height="16"
                viewbox="0 0 24 24"
                fill="none"
                stroke="currentColor"
                stroke-width="2"
                stroke-linecap="round"
                stroke-linejoin="round"
                class="lucide lucide-file-search2 mr-2"
              >
                <path d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z">
                </path>
                <path d="M14 2v4a2 2 0 0 0 2 2h4">
                </path>
                <circle
                  cx="11.5"
                  cy="14.5"
                  r="2.5"
                >
                </circle>
                <path d="M13.3 16.3 15 18">
                </path>
              </svg>
              package.json
            </gui-tabs-trigger>
          </gui-tabs-list>
          <gui-tabs-content value="package.json">
          </gui-tabs-content>
        </gui-tabs>
      </div>
    </gui-card>
  </div>
</div>

`;

exports[`SelectedItem render with default git host 1`] = `

<div>
  <div class="relative">
    <gui-card classname="relative my-4 border-muted-foreground">
      <gui-card-header classname="relative -m-px flex flex-row rounded-t-lg bg-primary px-4 py-3 text-white dark:border dark:border-solid dark:border-muted-foreground dark:text-black rounded-b-lg">
        <gui-card-title classname="flex w-full items-center justify-between">
          <div class="flex items-center justify-between">
            <span class="text-sm font-medium">
              item
            </span>
            <span class="mx-2">
              ·
            </span>
            <span class="text-sm font-light text-muted-foreground">
              1.0.0
            </span>
          </div>
          <div class="rounded-full border border-solid border-neutral-200 px-2 py-1 text-xs font-medium dark:border-gray-600">
            github:a/b
          </div>
        </gui-card-title>
      </gui-card-header>
      <div class="p-4">
      </div>
      <div class="w-full px-4 pb-4">
        <gui-tabs>
          <gui-tabs-list classname="grid w-full grid-cols-2">
            <gui-tabs-trigger
              value="package.json"
              classname="w-36"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="16"
                height="16"
                viewbox="0 0 24 24"
                fill="none"
                stroke="currentColor"
                stroke-width="2"
                stroke-linecap="round"
                stroke-linejoin="round"
                class="lucide lucide-file-search2 mr-2"
              >
                <path d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z">
                </path>
                <path d="M14 2v4a2 2 0 0 0 2 2h4">
                </path>
                <circle
                  cx="11.5"
                  cy="14.5"
                  r="2.5"
                >
                </circle>
                <path d="M13.3 16.3 15 18">
                </path>
              </svg>
              package.json
            </gui-tabs-trigger>
          </gui-tabs-list>
          <gui-tabs-content value="package.json">
          </gui-tabs-content>
        </gui-tabs>
      </div>
    </gui-card>
  </div>
</div>

`;

exports[`SelectedItem render with item 1`] = `

<div>
  <div class="relative">
    <gui-card classname="relative my-4 border-muted-foreground">
      <gui-card-header classname="relative -m-px flex flex-row rounded-t-lg bg-primary px-4 py-3 text-white dark:border dark:border-solid dark:border-muted-foreground dark:text-black rounded-b-lg">
        <gui-card-title classname="flex w-full items-center justify-between">
          <div class="flex items-center justify-between">
            <span class="text-sm font-medium">
              item
            </span>
            <span class="mx-2">
              ·
            </span>
            <span class="text-sm font-light text-muted-foreground">
              1.0.0
            </span>
          </div>
        </gui-card-title>
      </gui-card-header>
      <div class="p-4">
      </div>
      <div class="w-full px-4 pb-4">
        <gui-tabs>
          <gui-tabs-list classname="grid w-full grid-cols-2">
            <gui-tabs-trigger
              value="package.json"
              classname="w-36"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="16"
                height="16"
                viewbox="0 0 24 24"
                fill="none"
                stroke="currentColor"
                stroke-width="2"
                stroke-linecap="round"
                stroke-linejoin="round"
                class="lucide lucide-file-search2 mr-2"
              >
                <path d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z">
                </path>
                <path d="M14 2v4a2 2 0 0 0 2 2h4">
                </path>
                <circle
                  cx="11.5"
                  cy="14.5"
                  r="2.5"
                >
                </circle>
                <path d="M13.3 16.3 15 18">
                </path>
              </svg>
              package.json
            </gui-tabs-trigger>
          </gui-tabs-list>
          <gui-tabs-content value="package.json">
          </gui-tabs-content>
        </gui-tabs>
      </div>
    </gui-card>
  </div>
</div>

`;

exports[`SelectedItem render with scoped registry 1`] = `

<div>
  <div class="relative">
    <gui-card classname="relative my-4 border-muted-foreground">
      <gui-card-header classname="relative -m-px flex flex-row rounded-t-lg bg-primary px-4 py-3 text-white dark:border dark:border-solid dark:border-muted-foreground dark:text-black rounded-b-lg">
        <gui-card-title classname="flex w-full items-center justify-between">
          <div class="flex items-center justify-between">
            <span class="text-sm font-medium">
              item
            </span>
            <span class="mx-2">
              ·
            </span>
            <span class="text-sm font-light text-muted-foreground">
              1.0.0
            </span>
          </div>
          <div class="rounded-full border border-solid border-neutral-200 px-2 py-1 text-xs font-medium dark:border-gray-600">
            http://custom-scope
          </div>
        </gui-card-title>
      </gui-card-header>
      <div class="p-4">
      </div>
      <div class="w-full px-4 pb-4">
        <gui-tabs>
          <gui-tabs-list classname="grid w-full grid-cols-2">
            <gui-tabs-trigger
              value="package.json"
              classname="w-36"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="16"
                height="16"
                viewbox="0 0 24 24"
                fill="none"
                stroke="currentColor"
                stroke-width="2"
                stroke-linecap="round"
                stroke-linejoin="round"
                class="lucide lucide-file-search2 mr-2"
              >
                <path d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z">
                </path>
                <path d="M14 2v4a2 2 0 0 0 2 2h4">
                </path>
                <circle
                  cx="11.5"
                  cy="14.5"
                  r="2.5"
                >
                </circle>
                <path d="M13.3 16.3 15 18">
                </path>
              </svg>
              package.json
            </gui-tabs-trigger>
          </gui-tabs-list>
          <gui-tabs-content value="package.json">
          </gui-tabs-content>
        </gui-tabs>
      </div>
    </gui-card>
  </div>
</div>

`;
